--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #header {
   width: 100%;
   height: 100vh;
-  background-image: url(/images/img_landscape.jpg);
+  background-image: url(images/img_landscape.jpg);
   background-size: cover;
   background-position: center;
 }
